@@ -5,6 +5,8 @@
   - INCOMPATIBILITY Renamed QConnection.sync and QConnection.async to 
     QConnection.sendSync and QConnection.sendAsync resp.,
     because of 'async' becoming a keyword in Python 3.7
+  - replaced DataFrame.as_matrix() method (deprecated since Pandas 0.23.0) by 
+    DataFrame.values
 
 ------------------------------------------------------------------------------
   qPython 1.3.0 [2017.03.xx]
